--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
         <button type="button" id="sidebarCollapse" class="btn btn-sm btn-info">
