--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 <body>
     <div class="wrapper">
         {% include 'bar.html' %}
-        <div id="content" style="background-image: url({images/static/images/zachary-pearson-thC1uwWdMfM-unsplash.jpg}); background-repeat:no-repeat;background-size:cover">
+        <div id="content" style="background-image: url({images/}); background-repeat:no-repeat;background-size:cover">
         {% include 'navbar.html' %}
 
           {% block content %}
